src/Components/CreateImageWizard/CreateImageWizard.scss
.pf-v5-c-wizard__nav-list {
    padding-right: 0px;
}


.pf-c-popover[data-popper-reference-hidden="true"] {
    font-weight: initial;
    visibility: initial;
    pointer-events: initial;
}

.pf-v5-c-dual-list-selector {
    --pf-v5-c-dual-list-selector__menu--MinHeight: 18rem;
    --pf-v5-c-dual-list-selector--GridTemplateColumns--pane--MinMax--max: 100vw;
}

.pf-c-form {
    --pf-c-form--GridGap: var(--pf-v5-global--spacer--md);
}

.pf-c-form__group-label {
    --pf-c-form__group-label--PaddingBottom: var(--pf-v5-global--spacer--xs);
}

.tiles {
    display: flex;
}

.tile {
    flex: 1 0 0px;
    max-width: 250px;
}

.pf-c-tile:focus {
    --pf-c-tile__title--Color: var(--pf-c-tile__title--Color);
    --pf-c-tile__icon--Color: var(---pf-v5-global--Color--100);
    --pf-c-tile--before--BorderWidth: var(--pf-v5-global--BorderWidth--sm);
    --pf-c-tile--before--BorderColor: var(--pf-v5-global--BorderColor--100);
}

.pf-c-tile.pf-m-selected:focus {
    --pf-c-tile__title--Color: var(--pf-c-tile--focus__title--Color);
    --pf-c-tile__icon--Color: var(--pf-c-tile--focus__icon--Color);
}

.provider-icon {
    width: 1em;
    height: 1em;
}

.pf-v5-u-min-width {
    --pf-v5-u-min-width--MinWidth: 18ch;
}

.pf-v5-u-max-width {
    --pf-v5-u-max-width--MaxWidth: 26rem;
}

ul.pf-m-plain {
    list-style: none;
    padding-left: 0;
    margin-left: 0;
}

.not-available {
    color: #6a6e73;
}

.panel-border {
    --pf-v5-c-panel--before--BorderColor: #BEE1F4;
}

// Targets the alert within the Reviewsteps > content dropdown
// Removes excess top margin padding
div.pf-v5-c-alert.pf-m-inline.pf-m-plain.pf-m-warning {
    margin-top: 18px;

    h4 {
        margin-block-start: 0;
    }
}

// This is to fix the pagination UI bug, when patternfly updates this it can be removed!
.pf-v5-c-pagination.pf-m-bottom .pf-v5-c-menu-toggle {
    display: flex
}

.pf-v5-c-wizard__main {
    /* TO DO: This part of the code is responsible for the Wizard footer being fixed
    at the bottom of the page. Unfortunately there's a new bug that's at least
    partially caused by this styling: when zooming in or out while in Wizard,
    the Wizard shrunks it's height to an unusable value.

    Temporarily commenting out this code, until we figure out how the handle
    this bug.
    */
    // flex: 1 1 0
    
    // TO DO: Remove after the fix
    min-height: 800px;
}

